--- a/chapter9.css
+++ b/chapter9.css
@@ -27,3 +27,16 @@ main {
   margin-right: 0;
 }
 
+.step-img1 {
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-position: bottom;
+  background-size: cover;
+}
+
+.step-img2 {
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-position: bottom;
+  background-size: cover;
+}
